# odas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  re6_sockets.cfg  re6_vr.cfg
.github/workflows/: codeql-buildscript.sh  compilation.yaml  scheduled-stats.yml
config/: azimut3_close.cfg  azimut3_open.cfg  azimut_cma.cfg  azimut_oma.cfg  beam.cfg  delta1010lt.cfg  interfaces.ios  matrix_creator.cfg  matrix_voice.cfg  minidsp.cfg  pepper.cfg  respeaker.cfg  respeaker.ios  respeaker_4_mic_array.cfg  xmos.cfg  xmos.ios
config/core/: minidsp.json
config/matrix-demo/: matrix_creator.cfg  matrix_voice.cfg
config/minidsp/: uma8.json
config/odascore/: minidsp.cfg  pseye.cfg
config/odaslive/: azimut_cma.cfg  minidsp.cfg  pseye.cfg  respeaker_4_mic_array.cfg  respeaker_6_mic_array.cfg  respeaker_usb_4_mic_array.cfg
config/old/: azimut_oma.cfg  beam.cfg  delta1010lt.cfg  respeaker.cfg
config/server/bf/: minidsp.cfg
demo/: client.c  configs.c  configs.h  debug.c  main.c  objects.c  objects.h  parameters.c  parameters.h  profiler.c  profiler.h  server.c  threads.c  threads.h
demo/client/file/: main.c
demo/core/: configs.c  configs.h  main.c  objects.c  objects.h  params.c  params.h  profiler.h  settings.c  settings.h  sockets.c  sockets.h
demo/debug/: client.c  test.c
demo/matrix-demos/: README.md  matrix-odas.cpp
demo/odaslive/: configs.c  configs.h  objects.c  objects.h  parameters.c  parameters.h  profiler.c  profiler.h  threads.c  threads.h
demo/odasserver/: main.c
demo/server/bf/: configs.c  configs.h  main.c  objects.c  objects.h  params.c  params.h  settings.c  settings.h
demo/tools/: bits.c  channels.c  debug.c  filer.c  formatter.c  mapper.c  sequencer.c  server.c
include/: CMakeLists.txt
include/odas/: odas.h
octave/: pots2var.m  spectra2var.m  tracks2var.m
py/: client-file.py  client.py
py/messages/: hops.py  targets.py
settings/socket/: ssl.json  sss.json  sst.json
socket/: ssl.json  sss.json
src/aconnector/: acon_categories.c  acon_categories.h  acon_envs.c  acon_envs.h  acon_hops.c  acon_hops.h  acon_pots.c  acon_pots.h  acon_powers.c  acon_powers.h  acon_spectra.c  acon_spectra.h  acon_targets.c  acon_targets.h  acon_tracks.c  acon_tracks.h
src/ainjector/: ainj_targets.c  ainj_targets.h
src/amessage/: amsg_categories.c  amsg_categories.h  amsg_envs.c  amsg_envs.h  amsg_hops.c  amsg_hops.h  amsg_pots.c  amsg_pots.h  amsg_powers.c  amsg_powers.h  amsg_spectra.c  amsg_spectra.h  amsg_targets.c  amsg_targets.h  amsg_tracks.c  amsg_tracks.h
src/amodule/: amod_classify.c  amod_classify.h  amod_gain.c  amod_gain.h  amod_istft.c  amod_istft.h  amod_mapping.c  amod_mapping.h  amod_noise.c  amod_noise.h  amod_resample.c  amod_resample.h  amod_ssl.c  amod_ssl.h  amod_sspf.c  amod_sspf.h  amod_sss.c  amod_sss.h  amod_sst.c  amod_sst.h  amod_stft.c  amod_stft.h  amod_volume.c  amod_volume.h
src/asink/: asnk_categories.c  asnk_categories.h  asnk_hops.c  asnk_hops.h  asnk_pots.c  asnk_pots.h  asnk_powers.c  asnk_powers.h  asnk_spectra.c  asnk_spectra.h  asnk_tracks.c  asnk_tracks.h  asnk_xcorrs.c  asnk_xcorrs.h
src/asource/: asrc_hops.c  asrc_hops.h  asrc_spectra.c  asrc_spectra.h
src/connector/: con_categories.c  con_categories.h  con_envs.c  con_envs.h  con_hops.c  con_hops.h  con_pots.c  con_pots.h  con_powers.c  con_powers.h  con_spectra.c  con_spectra.h  con_targets.c  con_targets.h  con_tracks.c  con_tracks.h
src/general/: format.c  format.h  interface.c  interface.h  link.c  link.h  map.c  mic.c  mic.h  samplerate.c  samplerate.h  soundspeed.c  soundspeed.h  spatialfilter.c  spatialfilter.h  thread.c  thread.h
src/init/: combining.c  combining.h  delay.c  delay.h  directivity.c  directivity.h  hit.c  hit.h  linking.c  linking.h  scanning.c  scanning.h  space.c  space.h  windowing.c  windowing.h
src/injector/: inj_targets.c  inj_targets.h
src/message/: msg_categories.c  msg_categories.h  msg_envs.c  msg_envs.h  msg_hops.c  msg_hops.h  msg_pots.c  msg_pots.h  msg_powers.c  msg_powers.h  msg_spectra.c  msg_spectra.h  msg_targets.c  msg_targets.h  msg_tracks.c  msg_tracks.h  msg_xcorrs.c  msg_xcorrs.h
src/module/: mod_classify.c  mod_classify.h  mod_gain.c  mod_gain.h  mod_istft.c  mod_istft.h  mod_mapping.c  mod_mapping.h  mod_noise.c  mod_noise.h  mod_resample.c  mod_resample.h  mod_ssl.c  mod_ssl.h  mod_sspf.c  mod_sspf.h  mod_sss.c  mod_sss.h  mod_sst.c  mod_sst.h  mod_stft.c  mod_stft.h  mod_volume.c  mod_volume.h
src/signal/: acorr.c  acorr.h  aimg.c  aimg.h  area.c  area.h  assignation.c  assignation.h  beampattern.c  beampattern.h  category.c  category.h  coherence.c  coherence.h  delta.c  delta.h  demixing.c  demixing.h  env.c  env.h  frame.c  frame.h  freq.c  freq.h  gain.c  gain.h  hop.c  hop.h  impulse.c  impulse.h  index.c  index.h  kalman.c  kalman.h  map.c  map.h  mask.c  mask.h  mixture.c  mixture.h  (+38 more)
src/sink/: snk_categories.c  snk_categories.h  snk_hops.c  snk_hops.h  snk_pots.c  snk_pots.h  snk_powers.c  snk_powers.h  snk_spectra.c  snk_spectra.h  snk_tracks.c  snk_tracks.h  snk_xcorrs.c  snk_xcorrs.h
src/source/: src_hops.c  src_hops.h  src_pots.c  src_pots.h  src_spectra.c  src_spectra.h  src_tracks.c  src_tracks.h  src_xcorrs.c  src_xcorrs.h
src/system/: acorr2pitch.c  acorr2pitch.h  demixing2env.c  demixing2env.h  demixing2freq.c  demixing2freq.h  env2env.c  env2env.h  frame2freq.c  frame2freq.h  frame2hop.c  frame2hop.h  freq2acorr.c  freq2acorr.h  freq2env.c  freq2env.h  freq2frame.c  freq2frame.h  freq2freq.c  freq2freq.h  freq2xcorr.c  freq2xcorr.h  gain2mask.c  gain2mask.h  hop2frame.c  hop2frame.h  hop2hop.c  hop2hop.h  kalman2coherence.c  kalman2coherence.h  kalman2kalman.c  kalman2kalman.h  mixture2mixture.c  mixture2mixture.h  particle2coherence.c  particle2coherence.h  particle2particle.c  particle2particle.h  pitch2category.c  pitch2category.h  (+18 more)
src/utils/: cmatrix.c  cmatrix.h  fft.c  fft.h  fifo.c  fifo.h  gaussian.c  gaussian.h  gaussjordan.c  gaussjordan.h  inverse.c  inverse.h  matrix.c  matrix.h  pcm.c  pcm.h  random.c  random.h  transcendental.c  transcendental.h
(+339 files in other folders)
